--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 
   <div id="main">
-    <img src="images/img1.jpg" alt="Desenho de uma pessoa vestindo uma camisa amarela em uma sala com móveis">
+    <img src="images/img1.jpg">
 
     <h1>O seu próximo <span>destino</span> pode estar aqui...</h1>
     <p>Aqui você encontra uma seleção de <span>pacotes completos</span> para as suas férias!
@@ -45,7 +45,7 @@
     <a href="mailto:contato@flutuar.com">Contato</a>
   </div>
 
-  <img src="images/Wave.svg" alt="Bolinhas laranjas no canto direito inferior da tela" id="wave">
+  <img src="images/Wave.svg">
 
 </body>
 
